# mkmqr

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  setup.cfg
docs/: README-JA.md  README.md
micro_qr/: __init__.py  __main__.py
micro_qr/binary/: __init__.py  array.py  matrix.py
micro_qr/error_correction/: __init__.py  residue_field.py
micro_qr/factory/: symbol.py
micro_qr/matrix/: matrix_codeword.py  matrix_format_information.py
micro_qr/model/: __init__.py  error.py  error_correction_level.py  mask.py  values.py  version.py
micro_qr/optimization/: adapter.py  text_model.py  util.py
micro_qr/optimization/algorithm/: opt_brute_force.py
mkmqr/: __init__.py  __main__.py  util.py
mkmqr/error_correction/: polynomial_ring.py  reed_solomon_code.py  residue_field.py
mkmqr/factory/: __init__.py  segment.py  symbol.py
mkmqr/matrix/: __init__.py  matrix_codeword.py  matrix_function_pattern.py  matrix_mask.py
mkmqr/model/: mask.py  mode.py  version.py
mkmqr/optimization/: __init__.py  adapter.py
mkmqr/optimization/algorithm/: __init__.py  opt_hill_climbing.py
test/binary/: test_array.py  test_matrix.py
test/factory/: test_code.py  test_image.py
test/optimization/: test_optimization.py
test/test_error_correction/: test_reed_solomon_code.py  test_residue_field.py
