[metadata]
name = mkmqr
version = attr: mkmqr.__version.__version__
description = This is a package to make micro QR codes.
long_description = file: docs/README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
author = Toshiki Kamiya
author_email = tkamiya22@gmail.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
project_urls =
    Source Code = https://github.com/tkamiya22/mkmqr
    Bug Tracker = https://github.com/tkamiya22/mkmqr/issues
    # Documentation = https://mkmqr.readthedocs.io

[options]
packages =
    find: 
install_requires =
    numpy >= 1.20.0  # dtype of np.concatenate
    Pillow >= 9.1.0  # Image.NEAREST -> Image.Resampling.NEAREST
include_package_data = True

[options.entry_points]
console_scripts =
    mkmqr = mkmqr.__main__:main
